mutate is still missing

--- a/Makefile_c
+++ b/Makefile_c
@@ -3,10 +3,8 @@
 CC = gcc -std=c99 -pedantic -Wall -Wextra -Werror
 
 all: TSP
-TSP: tsp_genetic.o cities.o genetic.o 
-	$(CC) tsp_genetic.o cities.o genetic.o -o TSP
-cities.o: cities.c
-	$(CC) -c cities.c -o cities.o
+TSP: tsp_genetic.o genetic.o 
+	$(CC) tsp_genetic.o genetic.o -o TSP
 genetic.o: genetic.c
 	$(CC) -c genetic.c -o genetic.o
 tsp_genetic.o: tsp_genetic.c
